--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.4.2",
-    "@mui/material": "^5.11.9",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "axios": "^0.21.1",
     "next": "^13.0.3",
     "react": "^18.2.0",
