--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.4.2",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.13",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "@mui/material": "^5.11.14",
     "axios": "^0.21.1",
     "next": "^13.0.3",
     "react": "^18.2.0",
