--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "@hookform/resolvers": "^3.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.124",
-    "@mui/material": "^5.11.14",
+    "@mui/material": "^5.11.15",
     "axios": "^0.21.1",
+    "moment": "^2.29.4",
     "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
