--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -5,6 +5,9 @@ jobs:
   aws_cdk:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: master
       - name: cdk deploy
         uses: youyo/aws-cdk-github-actions@v2
         with:
