--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -5,16 +5,18 @@ jobs:
   aws_cdk:
     runs-on: ubuntu-latest
     steps:
+      - run: ls
       - uses: actions/checkout@v3
         with:
           ref: master
+      - run: ls
       - name: cdk deploy
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
           working_dir: './ecs-nginx'
           cdk_stack: '*'
-          cdk_args: '--profile cdg -c profile=staging'
+          cdk_args: '-c profile=staging'
           actions_comment: false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
