Include vehicle images in source

--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -1,12 +1,22 @@
 on:
   push:
     branches: [ prod ]
-name: Build Prod
-
 jobs:
-  deploy-prod:
-    name: "Deploy Prod"
-    uses: ./.github/workflows/build.yml
-    with:
-      environment: prod
-    secrets: inherit
+  aws_cdk:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: prod
+      - name: cdk deploy
+        uses: youyo/aws-cdk-github-actions@v2
+        with:
+          cdk_subcommand: 'deploy'
+          working_dir: './ecs-nginx'
+          cdk_stack: '*'
+          cdk_args: '-c profile=prod'
+          actions_comment: false
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
