--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -14,7 +14,7 @@ jobs:
           cdk_subcommand: 'deploy'
           working_dir: './ecs-nginx'
           cdk_stack: '*'
-          cdk_args: '-c profile=prod'
+          cdk_args: '-c profile=prod --require-approval never'
           actions_comment: false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
