Set build args in CDK stack build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,8 +12,11 @@ RUN npm install
 
 COPY . .
 
-RUN bin/create-nextjs-env-file.js
+ARG TEST_BUILD_ARG
+ENV TEST_BUILD_ENV =$TEST_BUILD_ARG
 
+
+RUN ["sh", "-c", "node bin/create-nextjs-env-file.js ${TEST_BUILD_ENV}"]
 
 RUN npm run build
 
