--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,16 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.15",
     "axios": "^0.21.1",
+    "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
     "next": "^13.0.3",
+    "p-limit": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.4",
     "swr": "^1.3.0",
+    "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
