--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -39,6 +39,8 @@ server {
     access_log /var/log/nginx/access.log access_log_format;
     error_log /var/log/nginx/error.log;
 
+    client_max_body_size 20M;
+
     location / {
         try_files $uri /index.php?$args;
         expires $expires;
